# top-comment-studio

./: .dockerignore  .env.example  .gitignore  ACCEPTANCE_CRITERIA.md  AGENTS.md  AI_YOUTUBE_PROJECT_PHILOSOPHY.md  COMMENT_SELECTION_POLICY.md  CONTENT_FORMATS.md  DECISIONS.md  Dockerfile  GUARDRAILS.md  HACKATHON_AGENT_SETUP.md  KNOWN_ISSUES.md  MANIFEST.txt  MVP_SPEC.md  Makefile.agent  PROJECT_BRIEF.md  PROJECT_TIMELINE.md  PROMPT_TEMPLATES.md  README.md  START_HERE_FOR_AI.md  TASKS.md  VIDEO_CHAIN_SCHEMA.md  YOUTUBE_API_NOTES.md  helpful.txt  pyproject.toml  render.yaml  runwayHackathon.code-workspace
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
data/samples/: sample_comments.json
docs/: AI_WORKFLOW.md  ARCHITECTURE.md  DEMO_SCRIPT.md  LIVE_DEPLOYMENT.md  NEXT_PHASE_BUILD_PLAN.md  PROJECT_INVENTORY.md  RUNWAY_DISCORD_POST.md  RUNWAY_POTENTIAL_API_ISSUES.md  RUNWAY_RESOURCES.md  RUNWAY_WORKFLOW_AGENT_HELP.md  RUNWAY_WORKFLOW_BUILD_GUIDE.md
prompts/: agent_prompts.md
scripts/: agent_repo_audit.py  run_runway_image_board_rows.py  run_runway_workflow_smoke.py  run_seedance_curl_diagnostic.ps1  verify_runway_workflow_contract.py
src/top_comment_studio/: __init__.py  app.py  guardrails.py  package_generator.py  schemas.py  settings.py  storage.py
src/top_comment_studio/runway/: __init__.py  client.py  prompts.py  workflows.py
src/top_comment_studio/static/: app.css
src/top_comment_studio/templates/: index.html  (+1 more)
tests/: test_runway_workflow.py  test_smoke_comment_to_package.py
