[project]
name = "top-comment-studio"
version = "0.1.0"
description = "Audience-in-the-loop YouTube Shorts workflow powered by Runway API."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "jinja2>=3.1.4",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.1",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.30.0"
]

[dependency-groups]
dev = [
  "pytest>=8.3.0"
]

[project.scripts]
top-comment-studio = "top_comment_studio.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/top_comment_studio"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
